examples/errors/undeclared_method.syntax
Program
  ProgramDeclaration
    ClassName: Main
    ProgramArguments
      Literals
        Literal: 1.100000
        Literal: 1.200000
  ClassDeclarations
    ClassDeclaration
      ClassName: A
      ClassBody
        MemberDeclarations
          MemberDeclaration
            MethodDeclaration
              Body
                BodyDeclarations
                  BodyDeclaration
                    VariableDeclaration
                      CompoundExpression: Integer
                      VariableName: a
                  BodyDeclaration
                    ReturnStatement
                      CompoundExpression: a
              ReturnType
                ClassName: Integer
              MethodName: abc
    ClassDeclaration
      ClassName: B
      Extension
        ClassName: A
      ClassBody
        MemberDeclarations
          MemberDeclaration
            ConstructorDeclaration
              Body
                BodyDeclarations
                  BodyDeclaration
                    VariableDeclaration
                      CompoundExpression: Real
                      VariableName: b
    ClassDeclaration
      ClassName: Main
      ClassBody
        MemberDeclarations
          MemberDeclaration
            ConstructorDeclaration
              Body
                BodyDeclarations
                  BodyDeclaration
                    VariableDeclaration
                      CompoundExpression: B
                      VariableName: a
                  BodyDeclaration
                    CompoundExpression: a
                      CompoundExpression: cddsf
